fix erroneous epsg from arcgis rest metadata and perform reprojections and clips to gc city boundary

--- a/notebooks/exploration/download_datasets.ipynb
+++ b/notebooks/exploration/download_datasets.ipynb
@@ -6,8 +6,8 @@
    "id": "51e622f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T19:48:18.602900Z",
-     "start_time": "2023-04-11T19:48:18.516130Z"
+     "end_time": "2023-04-12T13:29:49.432972Z",
+     "start_time": "2023-04-12T13:29:49.145386Z"
     }
    },
    "outputs": [],
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "36099285",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T20:21:49.033392Z",
-     "start_time": "2023-04-11T20:21:48.281935Z"
+     "end_time": "2023-04-12T13:29:52.027467Z",
+     "start_time": "2023-04-12T13:29:49.442105Z"
     }
    },
    "outputs": [],
@@ -34,8 +34,9 @@
     "from os.path import join\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "os.environ['USE_PYGEOS'] = '0'\n",
     "import geopandas as gpd\n",
-    "from shapely.geometry import Polygon, shape"
+    "from shapely.geometry import shape"
    ]
   },
   {
@@ -44,8 +45,8 @@
    "id": "44fd02bf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T19:48:23.284314Z",
-     "start_time": "2023-04-11T19:48:23.254658Z"
+     "end_time": "2023-04-12T13:29:52.353427Z",
+     "start_time": "2023-04-12T13:29:52.038276Z"
     }
    },
    "outputs": [],
@@ -114,243 +115,6 @@
     "\n",
     "# Write to file\n",
     "nsi.to_parquet(join(fr, 'exposure', 'nsi.pqt'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "38e6de50",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-11T19:54:19.738557Z",
-     "start_time": "2023-04-11T19:54:19.373730Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>geometry.type</th>\n",
-       "      <th>geometry.coordinates</th>\n",
-       "      <th>properties.fd_id</th>\n",
-       "      <th>properties.bid</th>\n",
-       "      <th>properties.occtype</th>\n",
-       "      <th>properties.st_damcat</th>\n",
-       "      <th>properties.bldgtype</th>\n",
-       "      <th>properties.found_type</th>\n",
-       "      <th>properties.cbfips</th>\n",
-       "      <th>...</th>\n",
-       "      <th>properties.val_vehic</th>\n",
-       "      <th>properties.source</th>\n",
-       "      <th>properties.med_yr_blt</th>\n",
-       "      <th>properties.firmzone</th>\n",
-       "      <th>properties.o65disable</th>\n",
-       "      <th>properties.u65disable</th>\n",
-       "      <th>properties.x</th>\n",
-       "      <th>properties.y</th>\n",
-       "      <th>properties.ground_elv</th>\n",
-       "      <th>properties.ground_elv_m</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Feature</td>\n",
-       "      <td>Point</td>\n",
-       "      <td>[-75.027694, 39.836728]</td>\n",
-       "      <td>549377745</td>\n",
-       "      <td>87F6RXPC+MWV-7-10-8-9</td>\n",
-       "      <td>COM3</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>W</td>\n",
-       "      <td>S</td>\n",
-       "      <td>340076074012026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>180000</td>\n",
-       "      <td>X</td>\n",
-       "      <td>1964</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-75.027694</td>\n",
-       "      <td>39.836728</td>\n",
-       "      <td>79.250601</td>\n",
-       "      <td>24.155582</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Feature</td>\n",
-       "      <td>Point</td>\n",
-       "      <td>[-75.028788, 39.939514]</td>\n",
-       "      <td>549416164</td>\n",
-       "      <td>87F6WXQC+RF4-12-13-12-14</td>\n",
-       "      <td>COM3</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>S</td>\n",
-       "      <td>S</td>\n",
-       "      <td>340076032003015</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>X</td>\n",
-       "      <td>1987</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-75.028788</td>\n",
-       "      <td>39.939514</td>\n",
-       "      <td>47.315855</td>\n",
-       "      <td>14.421872</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Feature</td>\n",
-       "      <td>Point</td>\n",
-       "      <td>[-75.033884, 39.91555]</td>\n",
-       "      <td>549971600</td>\n",
-       "      <td>87F6WX88+6C9-3-3-2-3</td>\n",
-       "      <td>RES3A</td>\n",
-       "      <td>RES</td>\n",
-       "      <td>W</td>\n",
-       "      <td>B</td>\n",
-       "      <td>340076062001005</td>\n",
-       "      <td>...</td>\n",
-       "      <td>54000</td>\n",
-       "      <td>X</td>\n",
-       "      <td>1939</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-75.033884</td>\n",
-       "      <td>39.915550</td>\n",
-       "      <td>15.376165</td>\n",
-       "      <td>4.686655</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Feature</td>\n",
-       "      <td>Point</td>\n",
-       "      <td>[-75.084571, 39.955341]</td>\n",
-       "      <td>550301356</td>\n",
-       "      <td>87F6XW48+45M-4-4-4-4</td>\n",
-       "      <td>RES1-2SWB</td>\n",
-       "      <td>RES</td>\n",
-       "      <td>W</td>\n",
-       "      <td>B</td>\n",
-       "      <td>340076011021001</td>\n",
-       "      <td>...</td>\n",
-       "      <td>27000</td>\n",
-       "      <td>X</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-75.084571</td>\n",
-       "      <td>39.955341</td>\n",
-       "      <td>18.458536</td>\n",
-       "      <td>5.626162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Feature</td>\n",
-       "      <td>Point</td>\n",
-       "      <td>[-74.999513, 39.870824]</td>\n",
-       "      <td>550414706</td>\n",
-       "      <td>87F7V2C2+85H-3-3-3-3</td>\n",
-       "      <td>COM8</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>M</td>\n",
-       "      <td>S</td>\n",
-       "      <td>340076035051009</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>X</td>\n",
-       "      <td>1964</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-74.999513</td>\n",
-       "      <td>39.870824</td>\n",
-       "      <td>52.017050</td>\n",
-       "      <td>15.854796</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      type geometry.type     geometry.coordinates  properties.fd_id  \\\n",
-       "0  Feature         Point  [-75.027694, 39.836728]         549377745   \n",
-       "1  Feature         Point  [-75.028788, 39.939514]         549416164   \n",
-       "2  Feature         Point   [-75.033884, 39.91555]         549971600   \n",
-       "3  Feature         Point  [-75.084571, 39.955341]         550301356   \n",
-       "4  Feature         Point  [-74.999513, 39.870824]         550414706   \n",
-       "\n",
-       "             properties.bid properties.occtype properties.st_damcat  \\\n",
-       "0     87F6RXPC+MWV-7-10-8-9               COM3                  COM   \n",
-       "1  87F6WXQC+RF4-12-13-12-14               COM3                  COM   \n",
-       "2      87F6WX88+6C9-3-3-2-3              RES3A                  RES   \n",
-       "3      87F6XW48+45M-4-4-4-4          RES1-2SWB                  RES   \n",
-       "4      87F7V2C2+85H-3-3-3-3               COM8                  COM   \n",
-       "\n",
-       "  properties.bldgtype properties.found_type properties.cbfips  ...  \\\n",
-       "0                   W                     S   340076074012026  ...   \n",
-       "1                   S                     S   340076032003015  ...   \n",
-       "2                   W                     B   340076062001005  ...   \n",
-       "3                   W                     B   340076011021001  ...   \n",
-       "4                   M                     S   340076035051009  ...   \n",
-       "\n",
-       "   properties.val_vehic  properties.source  properties.med_yr_blt  \\\n",
-       "0                180000                  X                   1964   \n",
-       "1                     0                  X                   1987   \n",
-       "2                 54000                  X                   1939   \n",
-       "3                 27000                  X                   2003   \n",
-       "4                     0                  X                   1964   \n",
-       "\n",
-       "   properties.firmzone  properties.o65disable  properties.u65disable  \\\n",
-       "0                 None                   0.25                   0.04   \n",
-       "1                 None                   0.25                   0.04   \n",
-       "2                 None                   0.25                   0.04   \n",
-       "3                 None                   0.25                   0.04   \n",
-       "4                 None                   0.25                   0.04   \n",
-       "\n",
-       "  properties.x properties.y  properties.ground_elv  properties.ground_elv_m  \n",
-       "0   -75.027694    39.836728              79.250601                24.155582  \n",
-       "1   -75.028788    39.939514              47.315855                14.421872  \n",
-       "2   -75.033884    39.915550              15.376165                 4.686655  \n",
-       "3   -75.084571    39.955341              18.458536                 5.626162  \n",
-       "4   -74.999513    39.870824              52.017050                15.854796  \n",
-       "\n",
-       "[5 rows x 32 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nsi.head()"
    ]
   },
   {
@@ -618,12 +382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 37,
    "id": "4d9e6c87",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T23:33:33.995356Z",
-     "start_time": "2023-04-11T23:33:33.245105Z"
+     "end_time": "2023-04-12T14:52:05.932498Z",
+     "start_time": "2023-04-12T14:52:04.902335Z"
     }
    },
    "outputs": [],
@@ -633,7 +397,7 @@
     "url = \"https://services3.arcgis.com/JGF6qCAQFbROcocK/arcgis/rest/services/CensusTracts/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson\"\n",
     "\n",
     "# Data in epsg: 3424\n",
-    "EPSG = '3424'\n",
+    "EPSG = '4326'\n",
     "\n",
     "# GET Request\n",
     "tract_get = requests.get(url)\n",
@@ -652,6 +416,10 @@
     "drop_col = ['type', 'id', 'geometry.type', 'geometry.coordinates']\n",
     "tract_geo = tract_geo.drop(columns=drop_col)\n",
     "\n",
+    "# Reproject to 3424\n",
+    "OUT_EPSG = '3424'\n",
+    "tract_geo = tract_geo.to_crs(epsg=OUT_EPSG)\n",
+    "\n",
     "# Write data to file\n",
     "tract_geo.to_file(join(fr, 'ref', 'tracts.gpkg'),\n",
     "                driver='GPKG')"
@@ -659,12 +427,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 33,
    "id": "e58790a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T23:32:44.029119Z",
-     "start_time": "2023-04-11T23:32:42.419738Z"
+     "end_time": "2023-04-12T14:50:16.817840Z",
+     "start_time": "2023-04-12T14:50:15.299858Z"
     }
    },
    "outputs": [],
@@ -673,7 +441,7 @@
     "url = \"https://services3.arcgis.com/JGF6qCAQFbROcocK/arcgis/rest/services/Zip_Codes/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson\"\n",
     "\n",
     "# Data in epsg: 3424\n",
-    "EPSG = '3424'\n",
+    "EPSG = '4326'\n",
     "\n",
     "# GET Request\n",
     "zip_get = requests.get(url)\n",
@@ -692,6 +460,10 @@
     "drop_col = ['type', 'id', 'geometry.type', 'geometry.coordinates']\n",
     "zip_geo = zip_geo.drop(columns=drop_col)\n",
     "\n",
+    "# Reproject to 3424\n",
+    "OUT_EPSG = '3424'\n",
+    "zip_geo = zip_geo.to_crs(epsg=OUT_EPSG)\n",
+    "\n",
     "# Write data to file\n",
     "zip_geo.to_file(join(fr, 'ref', 'zipcodes.gpkg'),\n",
     "                driver='GPKG')"
@@ -699,12 +471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 22,
    "id": "cca8026f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T23:30:07.996017Z",
-     "start_time": "2023-04-11T23:30:06.667218Z"
+     "end_time": "2023-04-12T13:40:23.199234Z",
+     "start_time": "2023-04-12T13:40:22.290814Z"
     }
    },
    "outputs": [],
@@ -712,8 +484,10 @@
     "# Municipalities for Camden (useful for clipping other data to GC)\n",
     "url = \"https://services3.arcgis.com/JGF6qCAQFbROcocK/arcgis/rest/services/CamdenCountyMunicipalLayer/FeatureServer/0/query?f=geojson&where=(NAMELSAD%20IN%20(%27Gloucester%20City%20city%27))&outFields=*\"\n",
     "\n",
-    "# Data is in epsg: 26918\n",
-    "EPSG = '26918'\n",
+    "# Data is in epsg: 4326\n",
+    "# Metadata suggests 26918 but\n",
+    "# local download shows epsg is 4326\n",
+    "EPSG = '4326'\n",
     "\n",
     "# GET Request\n",
     "mun_get = requests.get(url)\n",
@@ -792,34 +566,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "5399841d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T19:53:37.131940Z",
-     "start_time": "2023-04-11T19:53:36.418510Z"
+     "end_time": "2023-04-12T12:47:23.236447Z",
+     "start_time": "2023-04-12T12:47:21.353241Z"
     }
    },
    "outputs": [],
    "source": [
     "# NOAA SOVI\n",
-    "url = 'https://coast.noaa.gov/htdata/SocioEconomic/SoVI2010/SoVI_2010_NJ.zip'"
+    "url = 'https://coast.noaa.gov/htdata/SocioEconomic/SoVI2010/SoVI_2010_NJ.zip'\n",
+    "save_path = join(fr, 'vulnerability', 'social', 'noaa.zip')\n",
+    "\n",
+    "# Request and writing zip from here\n",
+    "# https://stackoverflow.com/questions/9419162/download-returned-zip-file-from-url\n",
+    "chunk_size = 128\n",
+    "r = requests.get(url, stream=True)\n",
+    "with open(save_path, 'wb') as fd:\n",
+    "    for chunk in r.iter_content(chunk_size=chunk_size):\n",
+    "        fd.write(chunk)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "89b9b0ef",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-11T19:53:45.566998Z",
-     "start_time": "2023-04-11T19:53:45.512944Z"
+     "end_time": "2023-04-12T14:19:47.681132Z",
+     "start_time": "2023-04-12T14:19:46.784987Z"
     }
    },
    "outputs": [],
    "source": [
     "# NJ env. burd communities\n",
-    "url = \"https://services1.arcgis.com/QWdNfRs7lkPq4g4Q/ArcGIS/rest/services/Overburdened_Communities_2020_Hosted/FeatureServer/0/query?where=NAME%3D%27Gloucester+City%27&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&resultType=none&distance=0.0&units=esriSRUnit_Meter&relationParam=&returnGeodetic=false&outFields=*&returnGeometry=true&returnCentroid=false&featureEncoding=esriDefault&multipatchOption=xyFootprint&maxAllowableOffset=&geometryPrecision=&outSR=&defaultSR=&datumTransformation=&applyVCSProjection=false&returnIdsOnly=false&returnUniqueIdsOnly=false&returnCountOnly=false&returnExtentOnly=false&returnQueryGeometry=false&returnDistinctValues=false&cacheHint=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&having=&resultOffset=&resultRecordCount=&returnZ=false&returnM=false&returnExceededLimitFeatures=true&quantizationParameters=&sqlFormat=none&f=pgeojson&token=\""
+    "url = \"https://services1.arcgis.com/QWdNfRs7lkPq4g4Q/ArcGIS/rest/services/Overburdened_Communities_2020_Hosted/FeatureServer/0/query?where=NAME%3D%27Gloucester+City%27&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&resultType=none&distance=0.0&units=esriSRUnit_Meter&relationParam=&returnGeodetic=false&outFields=*&returnGeometry=true&returnCentroid=false&featureEncoding=esriDefault&multipatchOption=xyFootprint&maxAllowableOffset=&geometryPrecision=&outSR=&defaultSR=&datumTransformation=&applyVCSProjection=false&returnIdsOnly=false&returnUniqueIdsOnly=false&returnCountOnly=false&returnExtentOnly=false&returnQueryGeometry=false&returnDistinctValues=false&cacheHint=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&having=&resultOffset=&resultRecordCount=&returnZ=false&returnM=false&returnExceededLimitFeatures=true&quantizationParameters=&sqlFormat=none&f=pgeojson&token=\"\n",
+    "# Data is supposed to be in epsg: 3424\n",
+    "# metadata says so\n",
+    "# but it's in epsg 4326\n",
+    "EPSG = '4326'\n",
+    "\n",
+    "# GET Request\n",
+    "ob_get = requests.get(url)\n",
+    "\n",
+    "# No loop needed because only ~100 records\n",
+    "# Temp data frame\n",
+    "temp = ob_get.json()['features']\n",
+    "temp_df = pd.json_normalize(temp)\n",
+    "temp_geo = [shape(i['geometry']) for i in temp]\n",
+    "\n",
+    "# Final df\n",
+    "ob_geo = gpd.GeoDataFrame(temp_df,\n",
+    "                          crs=EPSG,\n",
+    "                          geometry=temp_geo)\n",
+    "   \n",
+    "\n",
+    "# Drop type, id, geometry.type, geometry.coordinates\n",
+    "drop_col = ['type', 'id', 'geometry.type', 'geometry.coordinates']\n",
+    "ob_geo = ob_geo.drop(columns=drop_col)\n",
+    "\n",
+    "# Reproject to 3424\n",
+    "OUT_EPSG = '3424'\n",
+    "ob_geo = ob_geo.to_crs(epsg=OUT_EPSG)\n",
+    "\n",
+    "# Write data to file\n",
+    "ob_geo.to_file(join(fr, 'vulnerability', 'social', 'overburdened.gpkg'),\n",
+    "               driver='GPKG')"
    ]
   },
   {
@@ -877,7 +691,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "213.6px"
+    "width": "186.6px"
    },
    "toc_section_display": true,
    "toc_window_display": true
