--- a/notebooks/exploration/make_datasets.ipynb
+++ b/notebooks/exploration/make_datasets.ipynb
@@ -6,8 +6,8 @@
    "id": "9630f49e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T14:51:28.950761Z",
-     "start_time": "2023-03-14T14:51:28.758278Z"
+     "end_time": "2023-04-12T13:05:28.284881Z",
+     "start_time": "2023-04-12T13:05:28.051787Z"
     }
    },
    "outputs": [],
@@ -22,26 +22,11 @@
    "id": "aff1249c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T14:51:49.993222Z",
-     "start_time": "2023-03-14T14:51:29.409324Z"
+     "end_time": "2023-04-12T13:05:35.428058Z",
+     "start_time": "2023-04-12T13:05:31.029360Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2738410/399597061.py:7: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
-      "\n",
-      "import os\n",
-      "os.environ['USE_PYGEOS'] = '0'\n",
-      "import geopandas\n",
-      "\n",
-      "In a future release, GeoPandas will switch to using Shapely by default. If you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
-      "  import geopandas as gpd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from zipfile import ZipFile\n",
     "import os\n",
@@ -49,11 +34,15 @@
     "import sys\n",
     "import glob\n",
     "from os.path import join\n",
+    "os.environ['USE_PYGEOS'] = '0'\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import rasterio \n",
-    "from pyproj import CRS"
+    "from rasterio.warp import calculate_default_transform, reproject, Resampling\n",
+    "import rasterio.mask\n",
+    "from pyproj import CRS\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -70,8 +59,8 @@
    "id": "475958ff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T14:51:50.140767Z",
-     "start_time": "2023-03-14T14:51:49.999058Z"
+     "end_time": "2023-04-12T13:05:48.339664Z",
+     "start_time": "2023-04-12T13:05:47.806043Z"
     }
    },
    "outputs": [],
@@ -98,8 +87,8 @@
    "id": "0cd79409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T15:22:37.944755Z",
-     "start_time": "2023-03-14T15:19:48.074417Z"
+     "end_time": "2023-04-12T13:06:24.774116Z",
+     "start_time": "2023-04-12T13:06:24.046940Z"
     }
    },
    "outputs": [],
@@ -137,18 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "4fc4058e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T18:40:14.050114Z",
-     "start_time": "2023-02-01T18:40:13.616430Z"
+     "end_time": "2023-04-12T13:41:01.870000Z",
+     "start_time": "2023-04-12T13:41:00.983027Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Filepath to location boundary\n",
-    "boundary_filep = join(fi, 'hazard', '020402031007.shp')\n",
+    "# Reference the GC clip file\n",
+    "boundary_filep = join(fr, 'ref', 'city_clip.gpkg')\n",
     "# Read boundary\n",
     "boundary = gpd.read_file(boundary_filep)"
    ]
@@ -163,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "516e1af1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T18:59:28.292880Z",
-     "start_time": "2023-02-01T18:59:25.327571Z"
+     "end_time": "2023-04-12T13:18:28.429960Z",
+     "start_time": "2023-04-12T13:18:26.142459Z"
     }
    },
    "outputs": [],
@@ -181,12 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "37c6ac6c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T18:59:29.147495Z",
-     "start_time": "2023-02-01T18:59:28.296551Z"
+     "end_time": "2023-04-12T13:20:25.830422Z",
+     "start_time": "2023-04-12T13:20:24.866682Z"
     }
    },
    "outputs": [],
@@ -194,24 +183,24 @@
     "# Convert to geodataframe\n",
     "geometry = gpd.points_from_xy(nsi_full['properties.x'],\n",
     "                            nsi_full['properties.y'])\n",
-    "# The NSI CRS is EPSG 3426\n",
+    "# The NSI CRS is EPSG 4326\n",
     "nsi_gdf_f = gpd.GeoDataFrame(nsi_full, geometry=geometry,\n",
     "                             crs=\"EPSG:4326\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "id": "220b3bfd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T18:59:31.956301Z",
-     "start_time": "2023-02-01T18:59:29.150347Z"
+     "end_time": "2023-04-12T13:41:24.106604Z",
+     "start_time": "2023-04-12T13:41:23.431499Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Project nsi_gdf_f coordinates to EPSG 4269 so that they\n",
+    "# Project nsi_gdf_f coordinates to EPSG 3424 so that they\n",
     "# match the boundary CRS\n",
     "nsi_gdf_f = nsi_gdf_f.to_crs(boundary.crs)\n",
     "\n",
@@ -221,12 +210,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "id": "285fbf00",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T18:59:31.981026Z",
-     "start_time": "2023-02-01T18:59:31.958448Z"
+     "end_time": "2023-04-12T13:43:33.960478Z",
+     "start_time": "2023-04-12T13:43:33.518472Z"
     }
    },
    "outputs": [],
@@ -242,12 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "id": "d564cf8a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T18:59:52.297087Z",
-     "start_time": "2023-02-01T18:59:39.706788Z"
+     "end_time": "2023-04-12T13:43:42.182218Z",
+     "start_time": "2023-04-12T13:43:39.808056Z"
     }
    },
    "outputs": [],
@@ -260,10 +249,296 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7e5633d",
+   "metadata": {},
+   "source": [
+    "## Camden Depth Grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9765fb36",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T14:01:52.069442Z",
+     "start_time": "2023-04-12T14:01:51.253325Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Depth grid reference\n",
+    "dg_filep = join(fr, 'hazard', 'camden_depthgrid', 'cst_dpth01pct.tif')\n",
+    "\n",
+    "# Reprojected temp file\n",
+    "# Ensure directory exists\n",
+    "dg_reproj_dir = join(fi, 'hazard', 'tmp')\n",
+    "Path(dg_reproj_dir).mkdir(parents=True, exist_ok=True)\n",
+    "dg_reproj_filep = join(dg_reproj_dir, 'cst_depth01_r.tif')\n",
+    "\n",
+    "# Reproj & clipped file\n",
+    "# Goes in interim\n",
+    "dg_out_filep = join(fi, 'hazard', 'cst_depth01.tif')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "73940b8a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T14:02:22.566052Z",
+     "start_time": "2023-04-12T14:02:20.642709Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Reproject depth grid to epsg: 3424\n",
+    "from rasterio.warp import calculate_default_transform, reproject, Resampling\n",
+    "\n",
+    "# Straight from the source\n",
+    "# https://rasterio.readthedocs.io/en/stable/topics/reproject.html\n",
+    "\n",
+    "dst_crs = 'EPSG:3424'\n",
+    "\n",
+    "with rasterio.open(dg_filep) as src:\n",
+    "    transform, width, height = calculate_default_transform(\n",
+    "        src.crs, dst_crs, src.width, src.height, *src.bounds)\n",
+    "    kwargs = src.meta.copy()\n",
+    "    kwargs.update({\n",
+    "        'crs': dst_crs,\n",
+    "        'transform': transform,\n",
+    "        'width': width,\n",
+    "        'height': height\n",
+    "    })\n",
+    "\n",
+    "    with rasterio.open(dg_reproj_filep, 'w', **kwargs) as dst:\n",
+    "        for i in range(1, src.count + 1):\n",
+    "            reproject(\n",
+    "                source=rasterio.band(src, i),\n",
+    "                destination=rasterio.band(dst, i),\n",
+    "                src_transform=src.transform,\n",
+    "                src_crs=src.crs,\n",
+    "                dst_transform=transform,\n",
+    "                dst_crs=dst_crs,\n",
+    "                resampling=Resampling.nearest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "11b9998e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T14:04:38.270950Z",
+     "start_time": "2023-04-12T14:04:37.724182Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Clip depth grid to GC boundaries\n",
+    "import rasterio.mask\n",
+    "# Straight from the source\n",
+    "# https://rasterio.readthedocs.io/en/stable/topics/masking-by-shapefile.html\n",
+    "\n",
+    "# Replace shapes with boundary['geometry']\n",
+    "\n",
+    "with rasterio.open(dg_reproj_filep) as src:\n",
+    "    out_image, out_transform = rasterio.mask.mask(src, boundary['geometry'],\n",
+    "                                                  crop=True)\n",
+    "    out_meta = src.meta\n",
+    "out_meta.update({\"driver\": \"GTiff\",\n",
+    "                 \"height\": out_image.shape[1],\n",
+    "                 \"width\": out_image.shape[2],\n",
+    "                 \"transform\": out_transform})\n",
+    "\n",
+    "with rasterio.open(dg_out_filep, \"w\", **out_meta) as dest:\n",
+    "    dest.write(out_image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c1ac556",
+   "metadata": {},
+   "source": [
+    "## Camden Flood Zones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "21c340a0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T14:27:57.120210Z",
+     "start_time": "2023-04-12T14:27:29.021471Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Load nfhl.gdb, flood zone layer\n",
+    "nfhl_filep = join(fr, 'hazard', 'nfhl.gdb')\n",
+    "nfhl = gpd.read_file(nfhl_filep, layer='S_Fld_Haz_Ar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "4cd0ea9d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T14:28:59.614948Z",
+     "start_time": "2023-04-12T14:28:41.137554Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Reproject and clip\n",
+    "nfhl_r = nfhl.to_crs(boundary.crs)\n",
+    "nfhl_clip = gpd.clip(nfhl_r, boundary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f532060c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T14:34:10.009901Z",
+     "start_time": "2023-04-12T14:34:09.150369Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Keep FLD_ZONE, FLD_AR_ID, STATIC_BFE, geometry\n",
+    "keep_cols = ['FLD_ZONE', 'FLD_AR_ID', 'STATIC_BFE', 'ZONE_SUBTY',\n",
+    "             'geometry']\n",
+    "nfhl_f = nfhl_clip[keep_cols]\n",
+    "\n",
+    "# Adjust .2 pct X zones to X_500\n",
+    "nfhl_f.loc[nfhl_f['ZONE_SUBTY'] == '.2 PCT ANNUAL CHANCE FLOOD HAZARD',\n",
+    "           'FLD_ZONE'] = nfhl_f['FLD_ZONE'] + '_500'\n",
+    "\n",
+    "# Update column names\n",
+    "# Lower case\n",
+    "nfhl_f.columns = [x.lower() for x in nfhl_f.columns]\n",
+    "\n",
+    "# Drop ZONE_SUBTY\n",
+    "nfhl_f = nfhl_f.drop(columns=['zone_subty'])\n",
+    "\n",
+    "# Write file\n",
+    "nfhl_out_filep = join(fi, 'hazard', 'floodzones.gpkg')\n",
+    "nfhl_f.to_file(nfhl_out_filep, driver='GPKG')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cc3379d",
+   "metadata": {},
+   "source": [
+    "## CE JST Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f31c98c4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T14:55:00.445499Z",
+     "start_time": "2023-04-12T14:54:37.521353Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Filepath\n",
+    "ce_filep = join(fr, 'vulnerability', 'social', 'cejst', 'usa.shp')\n",
+    "# Read file\n",
+    "ce_geo = gpd.read_file(ce_filep)\n",
+    "# Subset to camden county\n",
+    "ce_camden = ce_geo[(ce_geo['SF'] == 'New Jersey') &\n",
+    "                   (ce_geo['CF'] == 'Camden County')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "62155b0a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T15:10:35.143487Z",
+     "start_time": "2023-04-12T15:10:34.025264Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Reproject\n",
+    "ce_camden = ce_camden.to_crs(boundary.crs)\n",
+    "\n",
+    "# Clip\n",
+    "ce_gc = gpd.clip(ce_camden, boundary)\n",
+    "\n",
+    "# Write file\n",
+    "ce_gc_out_filep = join(fi, 'vulnerability', 'cejst.gpkg')\n",
+    "ce_gc.to_file(ce_gc_out_filep, driver='GPKG')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace13ccf",
+   "metadata": {},
+   "source": [
+    "## Ref files (bg, tract, zip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "f1743b11",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-12T15:27:56.052414Z",
+     "start_time": "2023-04-12T15:27:52.979434Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# List of raw files\n",
+    "raw_filep = ['blockgroups/tl_2021_34_bg.shp',\n",
+    "             'tracts.gpkg', 'zipcodes.gpkg']\n",
+    "\n",
+    "# List of output files\n",
+    "out_filep = ['bg.gpkg', 'tracts.gpkg', 'zips.gpkg']\n",
+    "\n",
+    "# Input file directory\n",
+    "filedir_in = join(fr, 'ref')\n",
+    "\n",
+    "# Output file directory\n",
+    "filedir_out = join(fp, 'ref')\n",
+    "\n",
+    "# Loop through files\n",
+    "# Reproject each (if needed)\n",
+    "# Clip and write\n",
+    "for i, fp in enumerate(raw_filep):\n",
+    "    input_filep = join(filedir_in, fp)\n",
+    "    output_filep = join(filedir_out, out_filep[i])\n",
+    "    \n",
+    "    ref = gpd.read_file(input_filep)\n",
+    "    \n",
+    "    if ref.crs != boundary.crs:\n",
+    "        ref = ref.to_crs(boundary.crs)\n",
+    "    \n",
+    "    ref_clip = gpd.clip(ref, boundary)\n",
+    "    \n",
+    "    ref_clip.to_file(output_filep, driver='GPKG')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7be84326",
    "metadata": {},
    "source": [
-    "# Process Hazard Data"
+    "# Get Processed Structure Inventory"
    ]
   },
   {
@@ -271,7 +546,7 @@
    "id": "8281164e",
    "metadata": {},
    "source": [
-    "## Get input hazard data into spatially referenced format"
+    "## Link NSI and Parcels"
    ]
   },
   {
@@ -286,8 +561,17 @@
    },
    "outputs": [],
    "source": [
-    "haz_filedir = join(fi, 'hazard')\n",
-    "haz_dirs = glob.glob(join(haz_filedir, \"output*\"))"
+    "# First, process parcel data and write out\n",
+    "# Next, link relevant parcel data with NSI \n",
+    "# Merge reference files (bg, tract, zip) with NSI points\n",
+    "# Link NSI data to lmi, cejst, etc.\n",
+    "# Link NSI data to bfe, depth grids\n",
+    "\n",
+    "# There's filtering/cleaning\n",
+    "# There's a series of attribute joins\n",
+    "# There's a series of spatial joins\n",
+    "\n",
+    "# Want to write out all the id/var combos"
    ]
   },
   {
